# bevy_simple_rich_text

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: advanced.rs  basic.rs  readme.rs  text2d.rs
src/: lib.rs  parser.rs
