[package]
name = "bevy_simple_rich_text"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A tiny rich text helper for Bevy"
repository = "https://github.com/rparrett/bevy_simple_rich_text"
homepage = "https://github.com/rparrett/bevy_simple_rich_text"
documentation = "https://docs.rs/bevy_simple_rich_text"
keywords = ["bevy", "gamedev"]
categories = ["game-development"]
readme = "README.md"
exclude = [".github"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["bevy_text"] }
chumsky = "0.9.3"

[dev-dependencies]
bevy = { version = "0.14" }
