[package]
name = "bevy_simple_rich_text"
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A tiny rich text helper for Bevy"
repository = "https://github.com/rparrett/bevy_simple_rich_text"
homepage = "https://github.com/rparrett/bevy_simple_rich_text"
documentation = "https://docs.rs/bevy_simple_rich_text"
keywords = ["bevy", "gamedev"]
categories = ["game-development"]
readme = "README.md"
exclude = [".github"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
    "bevy_ui",
    "bevy_text",
    "bevy_scene",
    "bevy_log",
] }
chumsky = "0.9.3"

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }

[lints.rust]
missing_docs = "warn"
